instaladores mejorados, desinstaladores, scripts legacy eliminados

--- a/docs/.github-release.md
+++ b/docs/.github-release.md
@@ -24,8 +24,8 @@ El header ASCII ahora solo se muestra **una vez** al iniciar el programa, no en 
 Compatible con v1.3.0. Solo reemplaza el binario.
 
 ```bash
-chmod +x launcher-linux
-./launcher-linux
+chmod +x outputs/launcher-linux
+./outputs/launcher-linux
 ```
 
 ## ✅ Cambios
